# scrapy_project

./: .travis.yml  people.json  pyproject.toml  requirements.txt
scrapy_project/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_project/spiders/: workua.py
