[tool.poetry]
name = "scrapy_project"
version = "0.1.0"
description = ""
authors = ["Kateryna Bakhchedzhy <k.bakhchedzhy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.1"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
